pkg/kube/gateway/ingress/testdata/default-backend-regex.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: trickster
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: trickstercache.org/gateway-controller
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: shop
spec:
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fallback-svc
  namespace: shop
spec:
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: shop
  annotations:
    trickstercache.org/use-regex: "true"
spec:
  ingressClassName: trickster
  defaultBackend:
    service:
      name: fallback-svc
      port:
        number: 8080
  rules:
    - http:
        paths:
          - path: ^/api/(.*)$
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port:
                  number: 8080
