pkg/kube/gateway/ingress/testdata/regex.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: trickster
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: trickstercache.org/gateway-controller
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: shop
spec:
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: shop
  annotations:
    trickstercache.org/use-regex: "true"
    trickstercache.org/rewrite-target: /v2/${1}
spec:
  ingressClassName: trickster
  rules:
    - host: shop.example.com
      http:
        paths:
          - path: ^/api/(.*)$
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-svc
                port:
                  number: 8080
