pkg/kube/gateway/ingress/testdata/regex.golden.yaml
backends:
    kgw--ingress.shop.web_r0:
        provider: rp
        origin_url: http://web-svc.shop.svc:8080
        hosts:
            - shop.example.com
        listener_names:
            - default
        cache_key_prefix: ingress.shop.web
        path_routing_disabled: true
        path_defaults_disabled: true
        preserve_host: true
        paths:
            - path: ^/api/(.*)$
              match_type: regex
              handler: proxy
              methods:
                - '*'
              req_rewriter_name: kgw--ingress.shop.web_r0_w0
request_rewriters:
    kgw--ingress.shop.web_r0_w0:
        instructions:
            - - path
              - set
              - /v2/${1}
