pkg/kube/gateway/ingress/testdata/rewrite-prefix.golden.yaml
backends:
    kgw--ingress.shop.web_r0:
        provider: rp
        origin_url: http://web-svc.shop.svc:8080
        hosts:
            - shop.example.com
        listener_names:
            - default
        cache_key_prefix: ingress.shop.web
        path_routing_disabled: true
        path_defaults_disabled: true
        preserve_host: true
        paths:
            - path: /legacy
              match_type: segment
              handler: proxy
              methods:
                - '*'
              req_rewriter_name: kgw--ingress.shop.web_r0_w0
request_rewriters:
    kgw--ingress.shop.web_r0_w0:
        instructions:
            - - path
              - prefix-replace
              - /legacy
              - /
